--- a/tests/html/ifc-test-pos.html
+++ b/tests/html/ifc-test-pos.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <!--
-Negative test for IFC policy
+Positive test for IFC policy
 Page based on https://www.w3schools.com/html/tryit.asp?filename=tryhtml5_input_formenctype
-To run the test, execute ./mach run tests/html/ifc-test-neg.html from the project root directory.
+To run the test, first run python3 ifc-test-server.py in this directory, then execute
+./mach run http://127.0.0.1:8000 from the project root directory.
 
-Expected result is a panic originated from the IFC library, as it has detected a flow explicitly
-disallowed by our custom policy (where keyboard input can only be sent to the same domain that
-the page was loaded from).
+The browser should be able to navigate to the action page after clicking either of the
+submit buttons, and display what is typed in the text box.
 
-To run the positive test, see the instructions in ifc-test-pos.html.
+For a negative test, see the instructions in ifc-test-neg.html.
 -->
 <body>
 
@@ -17,7 +17,7 @@ To run the positive test, see the instructions in ifc-test-pos.html.
 
 <p>The formenctype attribute specifies how the form data should be encoded when submitted.</p>
 
-<form action="https://www.w3schools.com/action_page_binary.asp" method="post">
+<form action="http://127.0.0.1:8000/post" method="post">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <input type="submit" value="Submit">
