--- a/tests/html/ifc-test-pos.html
+++ b/tests/html/ifc-test-pos.html
@@ -4,7 +4,7 @@
 Positive test for IFC policy
 Page based on https://www.w3schools.com/html/tryit.asp?filename=tryhtml5_input_formenctype
 To run the test, first run python3 ifc-test-server.py in this directory, then execute
-./mach run http://127.0.0.1:8000 from the project root directory.
+./mach run http://127.0.0.1:8000/pos from the project root directory.
 
 The browser should be able to navigate to the action page after clicking either of the
 submit buttons, and display what is typed in the text box.
